fix error width on mobile

--- a/components/BannerSignUpBlock/style.scss
+++ b/components/BannerSignUpBlock/style.scss
@@ -73,6 +73,7 @@
     text-align: center;
     font-size: 21px;
     transform: translateY(-65px);
+    max-width: 400px;
   }
 }
 
@@ -93,6 +94,9 @@
       &:after{
         width: 120px;
       }
+    }
+    .sign_in_socials_account_error{
+      width: 280px;
     }
     .sign_in_socials_buttons_wrapper{
       width: 280px;
